cabal-version: 3.4
name:          stellar-horizon
version:       0
build-type:    Simple

library
  build-depends:
    , aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , ed25519
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , named
    , path-pieces
    , scientific
    , servant
    , servant-client
    , servant-docs
    , stellar-sdk
    , text
    , time

  default-language: Haskell2010
  exposed-modules:
    Stellar.Horizon.API
    Stellar.Horizon.Client
    Stellar.Horizon.DTO
    Stellar.Simple
    Stellar.Simple.Types

  hs-source-dirs:   lib

executable horizon
  -- global
  build-depends:
    , base
    , http-client-tls
    , optparse-applicative
    , optparse-generic
    , pretty-simple
    , servant-client
    , stellar-sdk
    , text

  -- package
  build-depends:    stellar-horizon
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
